07_service_mesh/greeter-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v2
  labels:
    app: greeter
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - image: learncloudnative/greeter-service:2.0.0
          imagePullPolicy: IfNotPresent
          name: svc
          ports:
            - containerPort: 3000
