07_service_mesh/greeter-virtualservice-v2-firefox.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter
spec:
  hosts:
    - greeter
  http:
    - match:
        - headers:
            user-agent:
              regex: ".*Firefox.*"
      route:
        - destination:
            host: greeter
            port:
              number: 3000
            subset: v2
    - route:
        - destination:
            host: greeter
            port:
              number: 3000
            subset: v1
