07_service_mesh/greeter-vs-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter
spec:
  hosts:
    - greeter
  http:
    - route:
        - destination:
            host: greeter
            port:
              number: 3000
            subset: v1
          weight: 100
        - destination:
            host: greeter
            port:
              number: 3000
            subset: v2
          weight: 0
